2015-02-01  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* facebook/account.py (AuthorizedFacebookAccount._error_cb): Fixed
	  an error message encode bug.

2014-12-26  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* facebook/entry.py (FacebookEntry): Fixed facebook image links
	(issue #76).

2014-12-05  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* share/gfeedline.xml.in: Added AppData.

2014-11-30  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* NEWS: 2.4.3 release.

2014-11-20  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* tweetentry.py (TwitterEntities.convert): Added support for
	  Twitter extended entities (multiple images on a Twitter entry).

2014-11-17  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* ast.po: Added new Asturian translation.  Thanks Ḷḷumex03!
	* twitter/assistant.py (TwitterAuthAssistant): Added a check if
	  the Twitter authentication is completed.

2014-11-10  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* facebook/account.py: Added support for Facebook Authentication
	  Error Subcodes.

2014-10-31  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* filterliststore.py (FilterListStore.expire): Fixed a
	  filterliststore expiration bug (issue #75).

2014-10-06  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* twittytwister/twitter.py: Fixed a bug for Twisted 11.0.0.

2014-09-23  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* nl_NL.po: Updated Dutch translation.  Thanks Heimen Stoffels!
	* tumblr/entry.py (AddedTumblrHtmlMarkup): Added removing
	  redundant HTML tags.
	* twittytwister/twitter.py: Added support for Twisted 14.0.0.

2014-08-23  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* es_ES.po: Updated Spanish translation.  Thanks Adolfo Jayme  Barrientos!

2014-08-21  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* NEWS: 2.4.2 release.

2014-08-14  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* ar.po: Updated Arabic translation.  Thanks Humaidan Mohammed!
	* facebook/entry.py (FacebookEntry): Fixed Facebook photo URLs.
